--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,8 @@ jobs:
 
       - name: Run tests
         run: cargo test --all-features --all-targets
+        env:
+          RUST_BACKTRACE: full
 
   build:
     name: Build Release Binaries (Matrix)
